--- a/.github/workflows/deploy-to-io.yml
+++ b/.github/workflows/deploy-to-io.yml
@@ -8,7 +8,8 @@ on:
     branches: ["main"]
 
 permissions:
-  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   cache-and-install:
@@ -46,7 +47,18 @@ jobs:
         run: pnpm install
       - name: Make a build
         run: pnpm run build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          folder: ./dist
+          path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: cache-and-install
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
